# IBM_course_AgenticAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
AI_agents_langgraph_deep_learning_ai/: Lesson_1_react_agents.ipynb  Lesson_2_langgraph_react.ipynb  Lesson_3_agentic_search.ipynb  Lesson_4_persistence_and_streaming.ipynb  Lesson_6_essay_writer.ipynb
Advanced_rag_with_vecror_db_retriever/: Build a Smarter Search with LangChain Context Retrieval.ipynb  Explore Advanced Retrievers in LlamaIndex.ipynb  Semantic Similarity with FAISS.ipynb
Advanced_rag_with_vecror_db_retriever/youtube_qa_bot/: app.py
Ai_agents_langgraph/: Build LangGraph Design Patterns Orchestration Evaluation.ipynb  Build Smarter AI Apps Empower LLMs with LangChain.ipynb  Building a Reflection Agent with LangGraph.ipynb  Building a Reflexion Agent with External Knowledge In.ipynb  Implement Workflow Patterns with LangGraph.ipynb  LangGraph101_Building_Stateful_AI_Workflows.ipynb  ReAct.ipynb
Ai_agents_langgraph/docchat_multiagent_system/: README.md  app.py  requirements.txt
Ai_agents_langgraph/multi-agent-trading-system/: multi_agent_trading.ipynb
Build_ai_agents_crewai_autogen/: AG2 101 AutoGen Complete Tutorial.ipynb  Agent-Tool vs Task-Tool in CrewAI.ipynb  Build Multi-Agent Chatbot with AG2 AutoGen for Healthcare.ipynb  CrewAI 101 Building Multi-Agent AI Systems.ipynb
Build_ai_agents_crewai_autogen/ai_agents_beeai/: t1.py  t2.py  t3.py  t4.py  t5.py  t6.py
Build_ai_agents_crewai_autogen/coding/: Import the necessary libraries
Build_ai_agents_crewai_autogen/meal_grocery_shopping_planner/: Create a Structured Meal Grocery Planner with CrewAI.ipynb  meals.json  nutrition_analysis.md  shopping_guide.md  shopping_list.json
Build_ai_agents_crewai_autogen/multi_agent_ai_nutrition_coach/: .gitignore  README.md  app.py  multimodal_queries.py
Build_rag_applications/basic_rag_app/: qabot.py  simple_llm.py
Build_rag_applications/genai_flask_app/: app.py  capital.py  llm_test.py  model.py
Build_rag_applications/rag_app_icebreaker/: README.md  app.py  config.py  main.py
Building_ai_agents/: AI-Math-Assistant Tool Calling.ipynb  Build Interactive LLM Agents with Tools.ipynb  LLM-Powered Data Science LCEL.ipynb  Manual Tool-Calling Agent.ipynb  README.md  Text-to-chart in Jupyter notebook Visualization Agent.ipynb
Course_2/: README.md
Course_2/basic_rag_app/: common_input.py  qabot.py
Course_2/rag_app_icebreaker/: config.py  main.py
Multi-modal-AI/ai_nutrition_coach_app/: app.py
Multi-model-AI/: simple_llm.py
Multi-model-AI/meeting_assistant/: hello.py  (+3 more)
Vector_databases_for_rag/: README.md  Similarity Search by Hand.ipynb  similarity_employeedata.py  similarity_search.py
basic_rag_app/: simple_llm.py
project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+32 files in other folders)
