[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb==1.0.12",
    "gradio==4.44.0",
    "ibm-watsonx-ai==1.1.2",
    "langchain==0.2.11",
    "langchain-community==0.2.10",
    "langchain-ibm==0.1.11",
    "llama-index==0.11.8",
    "llama-index-core>=0.11.23",
    "llama-index-embeddings-ibm>=0.2.1",
    "llama-index-llms-ibm>=0.2.1",
    "llama-index-readers-web>=0.2.4",
    "pydantic==2.9.1",
    "pypdf==4.3.1",
    "requests>=2.32.2",
    "ipykernel>=6.30.1",
    "langchain-groq>=0.1.10",
    "groq>=0.31.0",
    "langchain-mistralai>=0.1.13",
    "cryptography>=45.0.6",
]

[tool.setuptools]
packages = [
    "Build_rag_applications",
    "Building_ai_agents",
    "Vector_databases_for_rag"
]
