[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb==1.0.12",
    "gradio==4.44.0",
    "ibm-watsonx-ai==1.1.2",
    "langchain==0.2.11",
    "langchain-community==0.2.10",
    "langchain-ibm==0.1.11",
    "llama-index==0.11.8",
    "llama-index-core>=0.11.23",
    "llama-index-embeddings-ibm>=0.2.1",
    "llama-index-llms-ibm>=0.2.1",
    "llama-index-readers-web>=0.2.4",
    "pydantic==2.9.1",
    "pypdf==4.3.1",
    "requests>=2.32.2",
    "ipykernel>=6.30.1",
    "langchain-groq>=0.1.10",
    "groq>=0.31.0",
    "langchain-mistralai>=0.1.13",
    "cryptography>=45.0.6",
    "llama-index-embeddings-mistralai>=0.2.0",
    "llama-index-llms-langchain>=0.4.2",
    "wikipedia>=1.4.0",
    "openai>=1.99.3",
    "langchain-openai>=0.1.25",
    "langgraph>=0.4.5",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.1",
    "pandas>=2.1.4",
    "pytube>=15.0.0",
    "ipython>=8.37.0",
    "yt-dlp>=2025.7.21",
    "youtube-transcript-api>=1.2.2",
    "langchain-experimental>=0.0.64",
    "mysql-connector-python==8.4.0",
]

[tool.setuptools]
packages = [
    "Build_rag_applications",
    "Building_ai_agents",
    "Vector_databases_for_rag"
]
